* The 'MTurkRlog.tsv' file is now located according to a global option, specified by `options(MTurkR.logdir = getwd())`. The previous default behavior (to store the file in the working directory) is preserved but can now be globally modified for all requests. This might be useful for storing all requests (from all MTurk projects) in a single directory.

## BUG FIXES ##
* New versions of libcurl (>7.28) deprecate boolean values for SSL_VERIFYPEER and SSL_VERIFYHOST options. `request` was returning errors due to this and has been updated. Everything is backwards compatible to earlier versions of libcurl. (#31, h/t James Ben Taylor)
* `GenerateHITLayoutParameter` now replaces any non-XML ampersands with `&amp;`, which had previously caused failures when creating HITs. (#30, h/t Eric Lin)
* In `GetAssignment`, made a small change to prevent a warning and coercion of a one-assignment vector to a list. (h/t Eric Lin)
* Two HITReviewPolicy names weres changed per a discussion on the AWS developer forum. Details here: https://forums.aws.amazon.com/thread.jspa?threadID=135285.
* In `HITStatus` and `HITsToDataFrame` the correct capitalization of "Of" (from lower to upper) has been corrected throughout.
* A series of related changes were made to `GetAssignment`, `AssignmentsToDataFrame` and `QuestionFormAnswersToDataFrame` to handle Answer data structures with differing QuestionIdentifiers. (h/t Robert Vesco and Solomon Messing)
* Eliminated several `response.group` options from `GetHITsForQualificationType` due to personal communication with AWS.
* Fixed bug in `GetReviewableHITs` that correctly queried the API but returned an incomplete dataframe. (h/t Eric Lin)
* Fixed bug in `CreateHIT`, saying `type` was not defined, that occurred when `hit.type` was non-NULL. (h/t Eric Lin)