@@ -1,6 +1,6 @@
 Package: MTurkR
-Version: 0.3.73
-Date: 2013-10-13
+Version: 0.3.74
+Date: 2013-10-27
 Title: Access to Amazon Mechanical Turk Requester API via R
 Authors@R: c(	person("Thomas", "Leeper", role = c("aut", "cre"),
 					email = "thosjleeper@gmail.com"),
