@@ -13,8 +13,11 @@ function (qual, keypair = credentials(), print = getOption('MTurkR.print'),
     operation <- "GetQualificationType"
     if(is.null(qual)) 
         stop("Must specify QualificationTypeId")
-    else
-		GETparameters <- paste("&QualificationTypeId=", qual, sep = "")
+    else {
+		if(is.factor(qual))
+            qual <- as.character(qual)
+        GETparameters <- paste("&QualificationTypeId=", qual, sep = "")
+    }
     auth <- authenticate(operation, secret)
     if(browser == TRUE) {
         request <- request(keyid, auth$operation, auth$signature, 
