@@ -22,6 +22,14 @@ function (workers, assignments, amounts, reasons, keypair = credentials(),
         reasons <- rep(reasons[1], length(workers))
     if(!length(reasons) == length(workers)) 
         stop("Number of reasons is not 1 nor length(workers)")
+    if(is.factor(workers))
+        workers <- as.character(workers)
+    if(is.factor(assignments))
+        assignments <- as.character(assignments)
+    if(is.factor(reasons))
+        reasons <- as.character(reasons)
+    if(is.factor(amounts))
+        amounts <- as.character(amounts)
     for(i in 1:length(amounts)) {
         if(!is.numeric(as.numeric(amounts))) 
             stop(paste("Non-numeric bonus amount requested for bonus ", i, sep = ""))
