@@ -8,21 +8,27 @@ function (hit = NULL, hit.type = NULL, revert = FALSE, keypair = credentials(),
         keyid <- keypair[1]
         secret <- keypair[2]
     }
-    else stop("No keypair provided or 'credentials' object not stored")
+    else
+        stop("No keypair provided or 'credentials' object not stored")
     operation <- "SetHITAsReviewing"
     if(revert == TRUE) 
         revert <- "true"
-    else revert <- "false"
+    else
+        revert <- "false"
     if((is.null(hit) & is.null(hit.type)) | (!is.null(hit) & 
         !is.null(hit.type))) 
         stop("Must provide 'hit' xor 'hit.type'")
-    else if(!is.null(hit))
+    else if(!is.null(hit)){
+        if(is.factor(hit))
+            hit <- as.character(hit)
         hitlist <- hit
+    }
     else if(!is.null(hit.type)) {
+        if(is.factor(hit.type))
+            hit.type <- as.character(hit.type)
         hitsearch <- SearchHITs(keypair = keypair, print = FALSE, 
             log.requests = log.requests, sandbox = sandbox, return.qual.dataframe = FALSE)
-        hitlist <- hitsearch$HITs[hitsearch$HITs$HITTypeId == 
-            hit.type, ]$HITId
+        hitlist <- hitsearch$HITs[hitsearch$HITs$HITTypeId == hit.type, ]$HITId
         if(length(hitlist) == 0) 
             stop("No HITs found for HITType")
     }
