@@ -16,8 +16,8 @@ A lightweight menu-based Wizard (called by \code{\link{MTurkR.Wizard}}) is also 
 \tabular{ll}{
 Package: \tab MTurkR\cr
 Type: \tab Package\cr
-Version: \tab 0.3.73\cr
-Date: \tab 2013-10-26\cr
+Version: \tab 0.3.74\cr
+Date: \tab 2013-10-27\cr
 License: \tab GPL-2\cr
 }
 }
